--- a/CompositionExercise/3 CompositionExercise.csproj
+++ b/CompositionExercise/3 CompositionExercise.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="Lib\AccountCreationDuplicateValidationService.cs" />
     <Compile Include="Lib\AccountCreationEmailService.cs" />
+    <Compile Include="Lib\AccountCreationFormatValidationService.cs" />
     <Compile Include="Lib\AccountCreationService.cs" />
     <Compile Include="Lib\IAccountCreationService.cs" />
     <Compile Include="Lib\IAccountStore.cs" />
@@ -64,8 +65,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\AccountCreationDuplicateValidationServiceTests.cs" />
     <Compile Include="Tests\AccountCreationEmailServiceTests.cs" />
+    <Compile Include="Tests\AccountCreationFormatValidationServiceTests.cs" />
     <Compile Include="Tests\AccountCreationServiceTests.cs" />
     <Compile Include="Tests\FakeEmailer.cs" />
+    <Compile Include="Tests\FullStackTests.cs" />
     <Compile Include="Tests\InMemoryAccountStore.cs" />
   </ItemGroup>
   <ItemGroup>
