--- a/InheritanceExercise/1 InheritanceExercise.csproj
+++ b/InheritanceExercise/1 InheritanceExercise.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\AccountCreationFormatValidationServiceTests.cs" />
     <Compile Include="Tests\FakeEmailer.cs" />
+    <Compile Include="Tests\FullStackTests.cs" />
     <Compile Include="Tests\InMemoryAccountStore.cs" />
     <Compile Include="Tests\AccountCreationEmailServiceTests.cs" />
     <Compile Include="Tests\AccountCreationServiceTests.cs" />
